@@ -32,6 +32,7 @@ $ -> Language fix or change
  $ Adding/normalizing some .sys.ini strings/values com_user, com_weblinks
  # [#21706] Modifying [#21159] to let cat have the same name/alias when not in same tree when save&copy
  #$ [#21712] Weblinks /menu-items params correction. Thanks Bill.
+ # [#21694] Beez Templates xml files reference to language folder
  
 03-Aug-2010 Andrew Eddie
  # Fixed issue [#21346] Error in loading order of JS scripts in components (g p).
